# ost-images

./: .gitignore  10-stable-ipv6-addr.conf  LICENSE  Makefile.am  README.md  build.sh  build_node.sh  configure.ac  el8-provision-engine-deps.sh.in  el8-provision-engine.sh.in  el8-provision-he.sh.in  el8-provision-host-deps.sh.in  el8-provision-host.sh.in  el8.ks.in  el8stream-provision-engine-deps.sh.in  el8stream-provision-engine.sh.in  el8stream-provision-he.sh.in  el8stream-provision-host-deps.sh.in  el8stream-provision-host.sh.in  el8stream.ks.in  el9stream-provision-host.sh.in  el9stream.ks.in  id_rsa  id_rsa.pub  node.ks.in  ost-images.spec.in  provision-base.sh  rhel8-provision-engine.sh.in.in  rhel8-provision-he.sh.in  rhel8-provision-host.sh.in.in  rhel8.ks.in  stdci.yaml  template.ks.in  tested-engine-packages.txt  tested-he-packages.txt  tested-host-packages.txt
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml  cache.yml  cache_centos.yml  cache_iso.yml  ds-trigger.yaml  selenium.yml
automation/: build-ansible-ee.sh  ost-images-el8-no-base-publish.environment.yaml  ost-images-el8-no-base-publish.packages  ost-images-el8-no-base-publish.repos  ost-images-el8-no-base-publish.sh  ost-images-el8-no-base.packages  ost-images-el8-no-base.sh  ost-images-el8-publish.environment.yaml  ost-images-el8-publish.packages  ost-images-el8-top-layers.environment.yaml  ost-images-el8-top-layers.mounts  ost-images-el8-top-layers.packages  ost-images-el8-top-layers.repos  ost-images-el8.environment.yaml  ost-images-el8.sh  ost-images-el8stream-no-base-publish.environment.yaml  ost-images-el8stream-no-base-publish.packages  ost-images-el8stream-no-base-publish.repos  ost-images-el8stream-no-base-publish.sh  ost-images-el8stream-no-base.packages  ost-images-el8stream-publish.environment.yaml  ost-images-el8stream-publish.packages  ost-images-el8stream-publish.sh  ost-images-el8stream-top-layers.environment.yaml  ost-images-el8stream-top-layers.mounts  ost-images-el8stream-top-layers.packages  ost-images-el8stream.environment.yaml  ost-images-el8stream.mounts  ost-images-node-publish.environment.yaml  ost-images-node-publish.mounts  ost-images-node-publish.packages  ost-images-node-publish.sh  ost-images-node.environment.yaml  ost-images-publish.mounts  ost-images.environment.yaml  ost-images.mounts  ost-images.packages  ost-images.sh  templates.repos
build-ansible-ee/: execution-environment.yml  requirements.txt
configs/alma9/: alma9-provision-he.sh.in  alma9-provision-host.sh.in  build.env
configs/almalinux9/: almalinux9.ks.in
configs/el8/: build.env
configs/el8stream/: build.env  el8stream-provision-engine.sh.in  el8stream-provision-he.sh.in  el8stream-provision-host.sh.in  el8stream.ks.in
configs/el9node/: el9node.ks.in
configs/el9stream/: build.env  el9stream-provision-engine.sh.in  el9stream-provision-he.sh.in  el9stream-provision-host.sh.in  el9stream.ks.in
configs/node/: build.env  el9snode.ks.in  node.ks.in
configs/rhel8/: build.env  rhel8-provision-engine.sh.in  rhel8-provision-he.sh.in  rhel8-provision-host.sh.in  rhel8.ks.in
configs/rhvh/: build.env  rhvh.ks.in
configs/storage/: build.env  setup_selenium_grid.sh  storage.ks.in
helpers/: find-packages-in-repo.sh
makefiles/: base.mk  built-base.mk  built-upgrade.mk  cirros.mk  constants.mk  engine-installed.mk  he-installed.mk  host-installed.mk  pkglist.mk  preinstalled-upgrade.mk  vars.mk
mk/: built-base.mk  built-engine-deps-installed.mk  built-host-deps-installed.mk  built-upgrade.mk  constants.mk  engine-installed.mk  he-installed.mk  host-installed.mk  pkglist.mk  preinstalled-base.mk  preinstalled-engine-deps-installed.mk  preinstalled-host-deps-installed.mk  vars.mk
